Fix ui issue
when desktop site is viewed from mobile device, the top-focus bg
is distorted making the setted background color bg as for navbar
instead of the setted background image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@ body {
 header {
   background: url("../images/travelfusion.jpg") no-repeat center center;
   object-fit: cover;
+  background-size: cover;
   height: 100vh;
   width: 100%;
 }
